# cthrice

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Patlak.md  Pattern.md  README.md
res/: .cthrice-token  main.thr  main.thr.token  main.thr.token.license  token-tree-example
src/: buf.c  buffer.c  buffer.hh  cthrice_buffer.c  cthrice_buffer.h  cthrice_character.c  cthrice_character.h  cthrice_error.c  cthrice_error.h  cthrice_format.c  cthrice_format.h  cthrice_lexer.c  cthrice_lexer.h  cthrice_string.c  cthrice_string.h  cthrice_token.c  cthrice_token.h  cthrice_types.h  err.c  error.c  error.h  error.hh  expect.cc  file.cc  fmt.c  format.c  format.cc  lex.c  lexer.c  lexer.h  main.c  main.cc  range.hh  scalar.c  source_location.cc  str.c  string.c  tree.cc  view.hh
src/buffer/: api.h  buffer.c  buffer.cc  mod.h  mod.hh
src/error/: api.h  error.c
src/lexer/: internal.h  lex.c  mod.h  ruler.c  token.c
src/patlak/: api.cc  builder.c  code.c  code.cc  compiler.c  context.c  decode.c  hash.cc  lexer.c  lexer.cc  match.cc  object.c  parse.cc  parser.c  parser.cc  pattern.c  printer.c  state.c  token.c  token.cc
src/pattern/: api.h  api.hh  code.c  decode.c  hash.c  internal.h  internal.hh  lexer.c  matcher.c  matcher.cc  mod.hh  parser.c  parser.cc  print.c  printer.c  state.c
src/prelude/: api.cc  api.h  api.hh  appendable.cc  array.cc  border.cc  buffer.c  equalable.cc  equality_comparible.cc  error.cc  expect.c  expect.cc  expect.hh  file.c  file.cc  format.cc  function.hh  hashable.cc  iterator.cc  list.cc  map.cc  place.cc  range.cc  scalar.c  scalar.cc  slice.c  slice.cc  span.cc  split.c  split.cc  string.c  tree.cc  types.cc  view.cc  view.hh
src/string/: api.h  api.hh  character.c  mod.h  string.c  string.cc
src/types/: api.h  types.c
src/view/: mod.hh  view.cc
